# bevy_auto_plugin_macros

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/bevy_auto_plugin_nightly_proc_macros/: Cargo.toml
crates/bevy_auto_plugin_nightly_proc_macros/src/: lib.rs
crates/bevy_auto_plugin_nightly_shared/: Cargo.toml
crates/bevy_auto_plugin_nightly_shared/src/: lib.rs
crates/bevy_auto_plugin_proc_macros/: Cargo.toml
crates/bevy_auto_plugin_proc_macros/src/: lib.rs
crates/bevy_auto_plugin_shared/: Cargo.toml
crates/internal_test_util/: Cargo.toml
crates/internal_test_util/src/: lib.rs
crates/nightly_proc_macros/: Cargo.toml
crates/nightly_proc_macros/src/: lib.rs
crates/nightly_shared/: Cargo.toml
crates/nightly_shared/src/: lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  util.rs
src/: lib.rs
tests/: auto_add_event.rs  auto_add_event_generic.rs  auto_init_resource.rs  auto_init_resource_generic.rs  auto_plugin_param.rs  auto_register_type.rs  auto_register_type_generic.rs  mod.rs  ui_tests.rs
tests/nightly/: auto_add_event.rs  auto_add_event_generic.rs  auto_init_resource.rs  auto_init_resource_generic.rs  auto_name.rs  auto_name_with_generics.rs  auto_plugin_param.rs  auto_register_plugin.rs  auto_register_type.rs  auto_register_type_generic.rs  mod.rs  ui_tests.rs
tests/nightly/ui/: auto_plugin_already_registered.rs  auto_plugin_already_registered.stderr  auto_plugin_app_not_mutable.rs  auto_plugin_app_not_mutable.stderr  auto_plugin_missing_param.rs  auto_plugin_missing_param.stderr  invalid_generics.rs  invalid_generics.stderr
tests/stable/: auto_add_event.rs  auto_add_event_generic.rs  auto_init_resource.rs  auto_init_resource_generic.rs  auto_name.rs  auto_name_with_generic.rs  auto_plugin_param.rs  auto_register_plugin.rs  auto_register_type.rs  auto_register_type_generic.rs  mod.rs
tests/ui/: auto_plugin_already_registered.rs  auto_plugin_already_registered.stderr  auto_plugin_app_not_mutable.rs  auto_plugin_app_not_mutable.stderr  auto_plugin_missing_param.rs  auto_plugin_missing_param.stderr  invalid_generics.rs  invalid_generics.stderr
tests/ui/nightly/: auto_plugin_already_registered.stderr  auto_plugin_app_not_mutable.stderr  auto_plugin_missing_param.rs  auto_plugin_missing_param.stderr  invalid_generics.stderr
tests/ui/stable/: auto_plugin_already_registered.stderr  auto_plugin_app_not_mutable.stderr  auto_plugin_missing_param.stderr  invalid_generics.stderr
