[package]
name = "bevy_auto_plugin_macros"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"

[features]
default = []
stable = []
nightly = []

[workspace]
members = ["crates/*"]

[workspace.dependencies]
shared = { path = "crates/shared" }
proc_macros = { path = "crates/proc_macros" }
bevy_app = { version = "0.15", default-features = false }
bevy_reflect = { version = "0.15" }
bevy_internal = { version = "0.15" }
bevy_ecs = { version = "0.15" }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
thiserror = "2"

[dependencies]
proc_macros = { workspace = true }

[dev-dependencies]
bevy_app = { workspace = true, default-features = false }
bevy_reflect = { workspace = true }
bevy_ecs = { workspace = true }
internal_test_util = { path = "crates/internal_test_util" }