[package]
name = "bevy_auto_plugin_macros"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"

[features]
default = []
log_plugin_build = ["nightly_proc_macros/log_plugin_build"]
missing_auto_plugin_is_compile_error = ["nightly_proc_macros/missing_auto_plugin_is_compile_error"]
missing_auto_plugin_is_error = ["nightly_proc_macros/missing_auto_plugin_is_error"]
missing_auto_plugin_is_warning = ["nightly_proc_macros/missing_auto_plugin_is_warning"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
shared = { path = "crates/shared" }
nightly_shared = { path = "crates/nightly_shared" }
proc_macros = { path = "crates/proc_macros" }
nightly_proc_macros = { path = "crates/nightly_proc_macros" }
bevy_app = { version = "0.15", default-features = false }
bevy_core = { version = "0.15" }
bevy_reflect = { version = "0.15" }
bevy_internal = { version = "0.15" }
bevy_ecs = { version = "0.15" }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
thiserror = "2"
log = "0.4"

[dependencies]
proc_macros = { workspace = true }
nightly_proc_macros = { workspace = true }

[dev-dependencies]
bevy_app = { workspace = true, default-features = false }
bevy_core = { workspace = true }
bevy_reflect = { workspace = true }
bevy_ecs = { workspace = true }
internal_test_util = { path = "crates/internal_test_util" }
trybuild = "1.0"