[package]
name = "bevy_auto_plugin"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin"
license = "MIT OR Apache-2.0"
description = "Procedural macros to simplify and streamline the creation of Bevy plugins by automating the registration of types, initialization of resources, and addition of events"
edition = "2021"
publish = true

[features]
default = []
# unused (CI)
stable = []
# nightly - optional
nightly = ["nightly_proc_macro_span"]
nightly_proc_macro_span = ["bevy_auto_plugin_nightly_proc_macros/nightly_proc_macro_span"]
# nightly - optional extras
log_plugin_build = ["bevy_auto_plugin_nightly_proc_macros/log_plugin_build"]
missing_auto_plugin_is_compile_error = ["bevy_auto_plugin_nightly_proc_macros/missing_auto_plugin_is_compile_error"]
missing_auto_plugin_is_error = ["bevy_auto_plugin_nightly_proc_macros/missing_auto_plugin_is_error"]
missing_auto_plugin_is_warning = ["bevy_auto_plugin_nightly_proc_macros/missing_auto_plugin_is_warning"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy_auto_plugin_shared = { path = "crates/bevy_auto_plugin_shared" }
bevy_auto_plugin_nightly_shared = { path = "crates/bevy_auto_plugin_nightly_shared" }
bevy_auto_plugin_proc_macros = { path = "crates/bevy_auto_plugin_proc_macros" }
bevy_app = { version = "0.15", default-features = false }
bevy_core = { version = "0.15" }
bevy_reflect = { version = "0.15" }
bevy_internal = { version = "0.15" }
bevy_ecs = { version = "0.15" }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
thiserror = "2"
log = "0.4"

[dependencies]
bevy_auto_plugin_proc_macros = { workspace = true }
bevy_auto_plugin_nightly_proc_macros = { path = "crates/bevy_auto_plugin_nightly_proc_macros", optional = true }

[dev-dependencies]
bevy_app = { workspace = true, default-features = false }
bevy_core = { workspace = true }
bevy_reflect = { workspace = true }
bevy_ecs = { workspace = true }
internal_test_util = { path = "crates/internal_test_util" }
trybuild = "1.0"
log = { workspace = true }

[package.metadata.docs.rs]
toolchain = "nightly" # Use nightly for docs.rs
features = ["nightly"]