[package]
name = "bevy_auto_plugin_nightly_proc_macros"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
description = "proc macros for bevy_auto_plugin that require nightly rust"
edition = "2021"
publish = true

[lib]
proc-macro = true

[features]
log_plugin_build = ["log"]
nightly_proc_macro_span = ["bevy_auto_plugin_nightly_shared/nightly_proc_macro_span"]
missing_auto_plugin_check = []
missing_auto_plugin_is_compile_error = ["missing_auto_plugin_check"]
missing_auto_plugin_is_error = ["missing_auto_plugin_check", "log"]
missing_auto_plugin_is_warning = ["missing_auto_plugin_check", "log"]

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
bevy_auto_plugin_nightly_shared = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
log = { workspace = true, optional = true }