[package]
name = "bevy_auto_plugin_nightly_shared"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_nightly_shared"
license = "MIT OR Apache-2.0"
description = "shared lib for bevy_auto_plugin that require nightly rust"
edition = "2021"
publish = true

[lib]

[features]
nightly_proc_macro_span = []
missing_auto_plugin_check = []
missing_auto_plugin_is_compile_error = ["missing_auto_plugin_check"]
missing_auto_plugin_is_error = ["missing_auto_plugin_check", "log"]
missing_auto_plugin_is_warning = ["missing_auto_plugin_check", "log"]

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, optional = true }