[package]
name = "bevy_auto_plugin_proc_macros"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
description = "proc macros for bevy_auto_plugin"
edition = "2021"
publish = true

[lib]
proc-macro = true

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
