[package]
name = "bevy_auto_plugin_shared"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_shared"
license = "MIT OR Apache-2.0"
description = "shared lib for bevy_auto_plugin"
edition = "2021"
publish = true

[lib]

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }