[package]
name = "proc_macros"
version = "0.0.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
shared = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
